--- a/F1/views/movie_delete.hbs
+++ b/F1/views/movie_delete.hbs
@@ -1,4 +1,5 @@
-// movie delete 
+// movie delete  form created
+// inbuilt delete option
 
 <form action="" method="post">
     <input class="form-control" id="id" type="hidden" name="id" required="true" , value={{movie._id}}> </
